# emojyo

./: .gitignore  Dockerfile  README.md  data.py  docker-compose.yaml  main.py  pyproject.toml  test_basic.py
.github/linters/: .dockerfilelintrc  .hadolint.yml  .markdown-lint.yml  .yaml-lint.yml
.github/workflows/: lint.yaml  linters.yaml  python.yaml  release-drafter.yaml
emojyo/: data.py  main.py
tests/: test_basic.py  test_min_username_length.py  test_register_repeat_user.py
