[tool.poetry]
name = "emojyo"
version = "0.1.0"
description = "Yo with Emoji"
authors = ["Alex Norell <<3845666+alexnorell@users.noreply.github.com>", "Bryan Cole <20587384+ColePBryan@users.noreply.github.co>"]

[tool.poetry.dependencies]
python = "^3.9"
redis = "^3.5.3"
uvicorn = "^0.14.0"
fastapi = "^0.65.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.6b0"
pylint = "^2.8.3"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
